# CppCmakeGit-learning-minefield

./: .gitignore  Notes.md  Notes.txt  Readme.md
base/: CMakeLists.txt
base/src/: main.cpp
minefield/unicode-mess/: CMakeLists.txt
minefield/unicode-mess/src/: 1-cout-string.cpp  1-stdprint-string.cpp  1-wcout-minimal.cpp  1-wcout-string.cpp  Test.exe.manifest  common.h  text_1251.c  text_1251.h  text_1251.txt  text_oem.c  text_oem.h  text_oem866.txt  text_utf8.c  text_utf8.h  text_utf8.txt
tutorial-from-neocities/: Readme.md
tutorial-from-neocities/first-project/: CMakeLists.txt  build.bat  configure.bat
